--- a/debug.htm
+++ b/debug.htm
@@ -4,7 +4,7 @@
 <head>
 
     <title>Pac-Man</title>
-    <!-- last updated: Sun May 19 21:43:14 PDT 2019 -->
+    <!-- last updated: Sun May 14 17:01:42 PDT 2023 -->
     <!-- Lock viewport on mobile devices. -->
     <!--
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
@@ -39,7 +39,41 @@
         }
     </style>
 
-n<script src="src/inherit.js"></script>n<script src="src/sound.js"></script>n<script src="src/random.js"></script>n<script src="src/game.js"></script>n<script src="src/direction.js"></script>n<script src="src/Map.js"></script>n<script src="src/colors.js"></script>n<script src="src/mapgen.js"></script>n<script src="src/atlas.js"></script>n<script src="src/renderers.js"></script>n<script src="src/hud.js"></script>n<script src="src/galagaStars.js"></script>n<script src="src/Button.js"></script>n<script src="src/Menu.js"></script>n<script src="src/inGameMenu.js"></script>n<script src="src/sprites.js"></script>n<script src="src/Actor.js"></script>n<script src="src/Ghost.js"></script>n<script src="src/Player.js"></script>n<script src="src/actors.js"></script>n<script src="src/targets.js"></script>n<script src="src/ghostCommander.js"></script>n<script src="src/ghostReleaser.js"></script>n<script src="src/elroyTimer.js"></script>n<script src="src/energizer.js"></script>n<script src="src/fruit.js"></script>n<script src="src/executive.js"></script>n<script src="src/states.js"></script>n<script src="src/input.js"></script>n<script src="src/cutscenes.js"></script>n<script src="src/maps.js"></script>n<script src="src/vcr.js"></script>n<script src="src/main.js"></script>n
+
+<script src="src/inherit.js"></script>
+<script src="src/sound.js"></script>
+<script src="src/random.js"></script>
+<script src="src/game.js"></script>
+<script src="src/direction.js"></script>
+<script src="src/Map.js"></script>
+<script src="src/colors.js"></script>
+<script src="src/mapgen.js"></script>
+<script src="src/atlas.js"></script>
+<script src="src/renderers.js"></script>
+<script src="src/hud.js"></script>
+<script src="src/galagaStars.js"></script>
+<script src="src/Button.js"></script>
+<script src="src/Menu.js"></script>
+<script src="src/inGameMenu.js"></script>
+<script src="src/sprites.js"></script>
+<script src="src/Actor.js"></script>
+<script src="src/Ghost.js"></script>
+<script src="src/Player.js"></script>
+<script src="src/actors.js"></script>
+<script src="src/targets.js"></script>
+<script src="src/ghostCommander.js"></script>
+<script src="src/ghostReleaser.js"></script>
+<script src="src/elroyTimer.js"></script>
+<script src="src/energizer.js"></script>
+<script src="src/fruit.js"></script>
+<script src="src/executive.js"></script>
+<script src="src/states.js"></script>
+<script src="src/input.js"></script>
+<script src="src/cutscenes.js"></script>
+<script src="src/maps.js"></script>
+<script src="src/vcr.js"></script>
+<script src="src/main.js"></script>
+
 
 </head>
 
