--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <title>Pac-Man</title>
-    <!-- last updated: Sun May 14 21:10:27 PDT 2023 -->
+    <!-- last updated: Sat Jan 20 17:15:42 PST 2024 -->
     <!-- Lock viewport on mobile devices. -->
     <!--
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
